# spekk

./: .env  .gitignore  .pytest.ini  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  requirements.txt
spekk/: __init__.py  common.py  ops.py  shape.py  slicer.py  slicing.py  spec.py  trees.py  validation.py
spekk/array/: __init__.py  _types.py  _util.py  array_object.py  core.py  creation_functions.py  data_type_functions.py  data_types.py  elementwise_functions.py  exceptions.py  fft.py  indexing_functions.py  info.py  linalg.py  linear_algebra_functions.py  manipulation_functions.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py  vbeam_extensions.py
spekk/backends/: __init__.py  base.py  numpy.py  protocol.py
spekk/module/: __init__.py  base.py  slicing_mixin.py  trees.py
spekk/ops/: __init__.py  _types.py  _util.py  array_object.py  creation_functions.py  data_type_functions.py  data_types.py  elementwise_functions.py  fft.py  indexing_functions.py  info.py  linalg.py  linear_algebra_functions.py  manipulation_functions.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py  vbeam_extensions.py
spekk/process/: __init__.py  axis.py  base.py  common.py  formatter.py  kernels.py  transformations.py
spekk/transformations/: __init__.py  apply.py  axis.py  base.py  common.py  for_all.py  reduce.py  (+4 more)
spekk2/: __init__.py  slicing.py  spec.py
tests/: conftest.py  test_spec.py  test_transformations.py  test_validate.py
(+43 files in other folders)
