[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spekk"
version = "1.0.1"
authors = [
  { name="Magnus Dalen Kvalevåg", email="magnus.kvalevag@ntnu.no" },
]
description = "General speccing library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/magnusdk/spekk"
"Bug Tracker" = "https://github.com/magnusdk/spekk/issues"