[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Magnus Dalen Kvalevåg", email = "magnus.kvalevag@ntnu.no"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = ["numpy"]
description = "Named dimensions of nested arrays, independent of array implementation (Numpy, JAX, etc)"
name = "spekk"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.9"

[project.urls]
"Homepage" = "https://github.com/magnusdk/spekk/"
"Documentation" = "https://spekk.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/magnusdk/spekk/issues"